<resources>
    <string name="app_name">PracticaExamen</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_correo">Campo para ingresar su correo</string>
    <string name="msg_clave">Campo para ingresar su contraseña</string>
    <string name="msg_btLogin">Botón para hacer login en el App</string>
    <string name="msg_btRegister">Botón para registrarse en el App</string>
    <string name="title_activity_central">Central</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Planeta</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre_add">Nombre del País</string>
    <string name="msg_capital_add">Capital del País</string>
    <string name="msg_poblacion_add">Población del País</string>
    <string name="msg_moneda_add">Moneda del País</string>

    <string name="msg_pais_add">País agregado</string>
    <string name="bt_pais_add">Agregar País</string>

    <string name="bt_pais_update">Actualizar País</string>
    <string name="msg_pais_update">País actualizado</string>

    <string name="bt_pais_delete">Borrar País</string>
    <string name="msg_pais_delete">País borrado</string>
    <string name="msg_seguroBorrar">¿Seguro de eliminar?</string>
    <string name="no">No</string>
    <string name="si">Si</string>
</resources>